--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Book management",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,7 +24,6 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.13",
-    "nodemon": "^2.0.4",
     "shortid": "^2.2.15"
   }
 }
