--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongourl = "mongodb://localhost:27017/Book";
+mongourl = 'mongodb+srv://atlas123:ravi123@cluster0.ex4b5.mongodb.net/book?retryWrites=true&w=majority'
