--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Book management",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "frontend": "npm start --prefix frontend",
+    "build": "cd frontend/library && npm run build",
+    "install-client": "cd frontend/library && npm install",
+    "dev": "concurrently \"npm run index\" \"npm run frontend\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
   "license": "ISC",
