--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "frontend": "npm start --prefix frontend",
-    "build": "cd frontend/library && npm run build",
-    "install-client": "cd frontend/library && npm install",
+    "frontend": "npm start --prefix frontend/library",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
@@ -27,6 +25,7 @@
     "mongoose": "^5.10.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.13",
     "shortid": "^2.2.15"
   }
 }
