--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "frontend": "npm start --prefix frontend/library",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "frontend": "npm start --prefix frontend/library"
   },
   "author": "",
   "license": "ISC",
