--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "6.x"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "frontend": "npm start --prefix frontend/library",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend/library && npm run build --prefix frontend/library"
   },
@@ -26,10 +26,12 @@
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "loadsh": "0.0.4",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.10.7",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
+    "nodemon": "^2.0.5",
     "shortid": "^2.2.15"
   }
 }
