--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
     "nodemon": "^2.0.5",
-    "shortid": "^2.2.15"
+    "react-bootstrap-sweetalert": "^5.2.0",
+    "react-confirm-alert": "^2.6.2",
+    "shortid": "^2.2.15",
+    "socket.io": "^2.3.0",
+    "web-push": "^3.4.4"
   }
 }
