--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "6.x"
   },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "frontend": "npm start --prefix frontend/library",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend/library && npm run build --prefix frontend/library"
   },
